...
    <string name="error_invalid_link">Invalid link.</string>
    <string name="error_no_app_to_share">No app to share was found.</string>
    <string name="main_toolbar_expanded_title">Passos\ndo Impeachment</string>
    <string name="main_toolbar_shrunk_title">Passos do Impeachment</string>
    <string name="main_toolbar_tablet_title">Passos do Impeachment</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="nav_drawer_credits">Credits</string>
    <string name="nav_drawer_feedback">Feedback</string>
    <string name="nav_drawer_news_list">News</string>
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_opensource">Opensource</string>
    <string name="nav_drawer_step_list">Steps</string>
    <string name="nav_drawer_sync_title">Last update</string>
...
    <string name="app_name" translatable="false">Passos do Impeachment</string>
    <string name="app_opensource_url" translatable="false">https://goo.gl/xFTz4f</string>
    <string name="app_play_store_short_url" translatable="false">https://goo.gl/W30vp7</string>
    <string name="credits_hase_email" translatable="false">hasegawa.aran@gmail.com</string>
    <string name="credits_hase_email_subject" translatable="false">[Passos do Impeachment]</string>
    <string name="credits_hase_github" translatable="false">AranHase</string>
    <string name="credits_hase_github_url" translatable="false">https://github.com/AranHase</string>
    <string name="credits_hase_name" translatable="false">Allan Yoshio Hasegawa</string>
    <string name="title_activity_step_detail" translatable="false">StepDetailActivity</string>
</resources>
