...
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/colorPrimaryText"
                android:textSize="14sp"
                />

            <TextView
                android:id="@+id/step_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="sans-serif-regular"
                android:textColor="@color/colorSecondaryText"
                android:textSize="14sp"
...
